cambios agregamos cosas

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     
     <p>
-        hola estudiantes este es el papa de los helados !!!!
-
+        hola amigas y amigos este es el papa de los helados !!!!
+        el mas arrecho de los arrechos jajajaja
+    
 
     </p>
 
